--- a/collectors/python.d.plugin/dovecot/metadata.yaml
+++ b/collectors/python.d.plugin/dovecot/metadata.yaml
@@ -19,8 +19,8 @@ meta:
   most_popular: false
 overview:
   data_collection:
-    metrics_description: 'Examine Dovecot metrics for insights into IMAP and POP3 server operations. Analyze connection statuses, mailbox operations, and error rates for efficient mail server operations.'
-    method_description: 'This collector uses the dovecot socket and executes the `EXPORT global` command to get the statistics.'
+    metrics_description: 'This collector monitors Dovecot metrics about sessions, logins, commands, page faults and more.'
+    method_description: 'It uses the dovecot socket and executes the `EXPORT global` command to get the statistics.'
   supported_platforms:
     include: []
     exclude: []
@@ -51,7 +51,7 @@ setup:
 
         The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
 
-        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+        Additionally, the following collapsed table contains all the options that can be configured inside a JOB definition.
 
         Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
@@ -120,7 +120,7 @@ metrics:
   availability: []
   scopes:
   - name: global
-    description: ""
+    description: "These metrics refer to the entire monitored application."
     labels: []
     metrics:
     - name: dovecot.sessions
