--- a/collectors/python.d.plugin/icecast/metadata.yaml
+++ b/collectors/python.d.plugin/icecast/metadata.yaml
@@ -19,8 +19,8 @@ meta:
   most_popular: false
 overview:
   data_collection:
-    metrics_description: 'Examine Icecast metrics for insights into media streaming server operations. Study listener counts, bitrate, and connection statuses for smooth streaming services.'
-    method_description: 'This collector connects to an icecast URL and uses the `status-json.xsl` endpoint to retrieve statistics.'
+    metrics_description: 'This collector monitors Icecast listener counts.'
+    method_description: 'It connects to an icecast URL and uses the `status-json.xsl` endpoint to retrieve statistics.'
   supported_platforms:
     include: []
     exclude: []
@@ -51,7 +51,7 @@ setup:
 
         The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
 
-        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+        Additionally, the following collapsed table contains all the options that can be configured inside a JOB definition.
 
         Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
@@ -92,7 +92,7 @@ setup:
           required: false
     examples:
       folding:
-        enabled: true
+        enabled: false
         title: "Config"
       list:
         - name: Remote Icecast server
@@ -112,7 +112,7 @@ metrics:
   availability: []
   scopes:
   - name: global
-    description: ""
+    description: "These metrics refer to the entire monitored application."
     labels: []
     metrics:
     - name: icecast.listeners
