--- a/collectors/python.d.plugin/hpssa/metadata.yaml
+++ b/collectors/python.d.plugin/hpssa/metadata.yaml
@@ -20,8 +20,8 @@ meta:
   most_popular: false
 overview:
   data_collection:
-    metrics_description: 'Examine HP Smart Storage Arrays metrics with Netdata for efficient storage management. Improve your storage efficiency with real-time performance insights.'
-    method_description: 'This collector uses the command line tool `ssacli`. The exact command used is `sudo -n ssacli ctrl all show config detail`'
+    metrics_description: 'This collector monitors HP Smart Storage Arrays metrics about operational statuses and temperatures.'
+    method_description: 'It uses the command line tool `ssacli`. The exact command used is `sudo -n ssacli ctrl all show config detail`'
   supported_platforms:
     include: []
     exclude: []
@@ -76,7 +76,7 @@ setup:
 
         The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
 
-        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+        Additionally, the following collapsed table contains all the options that can be configured inside a JOB definition.
 
         Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
@@ -113,7 +113,7 @@ setup:
           required: false
     examples:
       folding:
-        enabled: true
+        enabled: false
         title: "Config"
       list:
         - name: Local simple config
@@ -133,7 +133,7 @@ metrics:
   availability: []
   scopes:
   - name: global
-    description: ""
+    description: "These metrics refer to the entire monitored application."
     labels: []
     metrics:
     - name: hpssa.ctrl_status
