--- a/collectors/python.d.plugin/rethinkdbs/metadata.yaml
+++ b/collectors/python.d.plugin/rethinkdbs/metadata.yaml
@@ -19,8 +19,8 @@ meta:
   most_popular: false
 overview:
   data_collection:
-    metrics_description: 'Monitor RethinkDB performance for real-time database operations and performance. Improve your database operations with Netdata''s real-time metrics and built-in alerts.'
-    method_description: 'This collector uses the `rethinkdb` python module to connect to a RethinkDB server instance and gather statistics.'
+    metrics_description: 'This collector monitors metrics about RethinkDB clusters and database servers.'
+    method_description: 'It uses the `rethinkdb` python module to connect to a RethinkDB server instance and gather statistics.'
   supported_platforms:
     include: []
     exclude: []
@@ -51,7 +51,7 @@ setup:
 
         The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
 
-        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+        Additionally, the following collapsed table contains all the options that can be configured inside a JOB definition.
 
         Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
@@ -100,7 +100,7 @@ setup:
           required: false
     examples:
       folding:
-        enabled: true
+        enabled: false
         title: "Config"
       list:
         - name: Local RethinkDB server
