--- a/collectors/python.d.plugin/tor/metadata.yaml
+++ b/collectors/python.d.plugin/tor/metadata.yaml
@@ -19,8 +19,8 @@ meta:
   most_popular: false
 overview:
   data_collection:
-    metrics_description: 'Monitor Tor metrics with Netdata for efficient anonymous communication operations. Enhance your anonymous communication with real-time insights and alerts.'
-    method_description: 'Connects to the Tor control port to collect traffic statistics.'
+    metrics_description: 'This collector monitors Tor bandwidth traffic .'
+    method_description: 'It connects to the Tor control port to collect traffic statistics.'
   supported_platforms:
     include: []
     exclude: []
@@ -56,7 +56,7 @@ setup:
 
         The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
 
-        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+        Additionally, the following collapsed table contains all the options that can be configured inside a JOB definition.
 
         Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
