--- a/collectors/python.d.plugin/memcached/metadata.yaml
+++ b/collectors/python.d.plugin/memcached/metadata.yaml
@@ -26,7 +26,8 @@ overview:
     description: ''
   default_behavior:
     auto_detection:
-      description: ''
+      description: |
+        If no configuration is given, collector will attempt to connect to memcached instance on `127.0.0.1:11211` address.
     limits:
       description: ''
     performance_impact:
@@ -36,14 +37,52 @@ setup:
     list: []
   configuration:
     file:
-      name: ''
+      name: python.d/memcached.conf
       description: ''
     options:
-      description: ''
+      description: |
+        There are 2 sections:
+
+        * Global variables
+        * One or more JOBS that can define multiple different instances to monitor.
+
+        The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
+
+        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+
+        Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
-        title: ''
+        title: Config options
         enabled: true
-      list: []
+      list:
+        - name: host
+          description: the host to connect to.
+          default_value: "127.0.0.1"
+          required: false
+        - name: port
+          description: the port to connect to.
+          default_value: "11211"
+          required: false
+        - name: update_every
+          description: Sets the default data collection frequency.
+          default_value: 10
+          required: false
+        - name: priority
+          description: Controls the order of charts at the netdata dashboard.
+          default_value: 60000
+          required: false
+        - name: autodetection_retry
+          description: Sets the job re-check interval in seconds.
+          default_value: 0
+          required: false
+        - name: penalty
+          description: Indicates whether to apply penalty to update_every in case of failures.
+          default_value: yes
+          required: false
+        - name: name
+          description: Job name. This value will overwrite the `job_name` value. JOBS with the same name are mutually exclusive. Only one of them will be allowed running at any time. This allows autodetection to try several alternatives and pick the one that works.
+          default_value: ''
+          required: false
     examples:
       folding:
         enabled: true
