Updated Docker deployment options and added Kubernetes

--- a/integrations/deploy.yaml
+++ b/integrations/deploy.yaml
@@ -262,9 +262,229 @@
             netdata/netdata:stable \
             -e NETDATA_CLAIM_TOKEN= {% claim_token %} \
             -e NETDATA_CLAIM_URL={% claim_url %}
+    - method: Docker Compose
+      commands:
+        - channel: nightly
+          command: |
+            version: '3'
+            services:
+              netdata:
+                image: netdata/netdata:edge
+                container_name: netdata
+                pid: host
+                network_mode: host
+                restart: unless-stopped
+                cap_add:
+                  - SYS_PTRACE
+                  - SYS_ADMIN
+                security_opt:
+                  - apparmor:unconfined
+                volumes:
+                  - netdataconfig:/etc/netdata
+                  - netdatalib:/var/lib/netdata
+                  - netdatacache:/var/cache/netdata
+                  - /etc/passwd:/host/etc/passwd:ro
+                  - /etc/group:/host/etc/group:ro
+                  - /proc:/host/proc:ro
+                  - /sys:/host/sys:ro
+                  - /etc/os-release:/host/etc/os-release:ro
+                  - /var/run/docker.sock:/var/run/docker.sock:ro
+                environment:
+            - NETDATA_CLAIM_TOKEN={% claim_token %}
+            - NETDATA_CLAIM_URL={% claim_url %}
+            - NETDATA_CLAIM_ROOMS=  
+            volumes:
+              netdataconfig:
+              netdatalib:
+              netdatacache:
+        - channel: stable
+          command: |
+            version: '3'
+            services:
+              netdata:
+                image: netdata/netdata:stable
+                container_name: netdata
+                pid: host
+                network_mode: host
+                restart: unless-stopped
+                cap_add:
+                  - SYS_PTRACE
+                  - SYS_ADMIN
+                security_opt:
+                  - apparmor:unconfined
+                volumes:
+                  - netdataconfig:/etc/netdata
+                  - netdatalib:/var/lib/netdata
+                  - netdatacache:/var/cache/netdata
+                  - /etc/passwd:/host/etc/passwd:ro
+                  - /etc/group:/host/etc/group:ro
+                  - /proc:/host/proc:ro
+                  - /sys:/host/sys:ro
+                  - /etc/os-release:/host/etc/os-release:ro
+                  - /var/run/docker.sock:/var/run/docker.sock:ro
+                environment:
+            - NETDATA_CLAIM_TOKEN={% claim_token %}
+            - NETDATA_CLAIM_URL={% claim_url %}
+            - NETDATA_CLAIM_ROOMS=  
+            volumes:
+              netdataconfig:
+              netdatalib:
+              netdatacache:
+    - method: Docker Swarm
+      commands:
+        - channel: nightly
+          command: |
+            version: '3'
+              services:
+                netdata:
+                  image: netdata/netdata:edge
+                  container_name: netdata
+                  ports:
+                    - 19999:19999
+                  restart: unless-stopped
+                  cap_add:
+                    - SYS_PTRACE
+                  security_opt:
+                    - apparmor:unconfined
+                  volumes:
+                    - netdataconfig:/etc/netdata
+                    - netdatalib:/var/lib/netdata
+                    - netdatacache:/var/cache/netdata
+                    - /etc/passwd:/host/etc/passwd:ro
+                    - /etc/group:/host/etc/group:ro
+                    - /proc:/host/proc:ro
+                    - /sys:/host/sys:ro
+                    - /etc/os-release:/host/etc/os-release:ro
+                    - /etc/hostname:/etc/hostname:ro
+                  environment:
+            - NETDATA_CLAIM_TOKEN={% claim_token %}
+            - NETDATA_CLAIM_URL={% claim_url %}
+            - NETDATA_CLAIM_ROOMS=
+                  deploy:
+                    mode: global
+              
+              volumes:
+                netdataconfig:
+                netdatalib:
+                netdatacache:
+        - channel: stable
+          command: |
+            version: '3'
+              services:
+                netdata:
+                  image: netdata/netdata:stable
+                  container_name: netdata
+                  ports:
+                    - 19999:19999
+                  restart: unless-stopped
+                  cap_add:
+                    - SYS_PTRACE
+                  security_opt:
+                    - apparmor:unconfined
+                  volumes:
+                    - netdataconfig:/etc/netdata
+                    - netdatalib:/var/lib/netdata
+                    - netdatacache:/var/cache/netdata
+                    - /etc/passwd:/host/etc/passwd:ro
+                    - /etc/group:/host/etc/group:ro
+                    - /proc:/host/proc:ro
+                    - /sys:/host/sys:ro
+                    - /etc/os-release:/host/etc/os-release:ro
+                    - /etc/hostname:/etc/hostname:ro
+                  environment:
+            - NETDATA_CLAIM_TOKEN={% claim_token %}
+            - NETDATA_CLAIM_URL={% claim_url %}
+            - NETDATA_CLAIM_ROOMS=
+                  deploy:
+                    mode: global
+              
+              volumes:
+                netdataconfig:
+                netdatalib:
+                netdatacache:
   additional_info: ''
   related_resources: {}
   platform_info:
     group: 'no_include'
     distro: 'docker'
+  quick_start: 1
+-
+  id: deploy-kubernetes
+  meta:
+    name: Kubernetes
+    link: ''
+    categories:
+      - deploy.docker-kubernetes
+    icon_filename: 'kubernetes.png'
+  keywords:
+    - kubernetes
+    - container
+    - Orchestrator
+  description: |
+    **Use helm install to install Netdata on your Kubernetes cluster**
+    For a new installation use `helm install`` or for existing clusters add the content below to your `override.yamland`` then run `helm upgrade -f override.yml netdata netdata/netdata`
+  methods:
+    - method: Helm
+      commands:
+        - channel: nightly
+          command: |
+            helm install netdata netdata/netdata \
+            --set image.tag=latest \
+            --set parent.claiming.enabled="true" \
+            --set parent.claiming.token={% claim_token %} \
+            --set child.claiming.enabled="true" \
+            --set child.claiming.token={% claim_token %}
+        - channel: stable
+          command: |
+            helm install netdata netdata/netdata \
+            --set image.tag=stable \
+            --set parent.claiming.enabled="true" \
+            --set parent.claiming.token={% claim_token %} \
+            --set child.claiming.enabled="true" \
+            --set child.claiming.token={% claim_token %}
+    - method: Existing Cluster
+      commands:
+        - channel: nightly
+          command: |
+            image:
+              tag: latest
+              
+            restarter:
+              enabled: true
+              
+            parent:
+              claiming:
+                enabled: true
+                token: {% claim_token %}
+                rooms: 
+              
+            child:
+              claiming:
+                enabled: true
+                token: {% claim_token %}
+                rooms: 
+        - channel: stable
+          command: |
+            image:
+              tag: stable
+              
+            restarter:
+              enabled: true
+              
+            parent:
+              claiming:
+                enabled: true
+                token: {% claim_token %}
+                rooms: 
+              
+            child:
+              claiming:
+                enabled: true
+                token: {% claim_token %}
+                rooms: 
+  additional_info: ''
+  related_resources: {}
+  platform_info:
+    group: ''
+    distro: ''
   quick_start: 1
