freeimpi_yaml: Add initial description

--- a/collectors/freeipmi.plugin/multi_metadata.yaml
+++ b/collectors/freeipmi.plugin/multi_metadata.yaml
@@ -23,26 +23,31 @@ modules:
       data_collection:
         metrics_description:
           "Monitor enterprise server sensor readings, event log entries, and hardware statuses to ensure reliable server operations."
-        method_description: ""
+        method_description: |
+          The plugin uses open source library IPMImonitoring to communitcate with sensors.
       supported_platforms:
         include: []
         exclude: []
       multi_instance: true
       additional_permissions:
-        description: ""
+        description: "The plugin needs setuid."
       default_behavior:
         auto_detection:
           description: ""
         limits:
           description: ""
         performance_impact:
-          description: ""
+          description: "Linux kernel module for IPMI can create big overhead."
     setup:
       prerequisites:
-        list: []
+        list: |
+          If you have not previously used IPMI on your system, you will probably need to run the ipmimonitoring command as root to initiailze IPMI settings so that the Netdata plugin works correctly. It should return information about available seensors on the system.
+
+          In some distributions libipmimonitoring.pc is located in a non-standard directory, which can cause building the plugin to fail when building Netdata from source. In that case you should find the file and link it to the standard pkg-config directory. Usually, running sudo ln -s /usr/lib/$(uname -m)-linux-gnu/pkgconfig/libipmimonitoring.pc/libipmimonitoring.pc /usr/lib/pkgconfig/libipmimonitoring.pc resolves this issue.
       configuration:
         file:
-          name: ""
+          name: "netdata.conf"
+          section_name: '[plugin:freeipmi]'
           description: ""
         options:
           description: ""
