--- a/collectors/python.d.plugin/tomcat/metadata.yaml
+++ b/collectors/python.d.plugin/tomcat/metadata.yaml
@@ -3,7 +3,7 @@ meta:
   module_name: tomcat
   monitored_instance:
     name: Tomcat
-    link: ''
+    link: 'https://tomcat.apache.org/'
     categories:
     - data-collection.web-servers-and-web-proxies
     icon_filename: 'tomcat.png'
@@ -12,43 +12,104 @@ meta:
       list: []
   info_provided_to_referring_integrations:
     description: ''
-  keywords: []
+  keywords:
+    - apache
+    - tomcat
+    - webserver
+    - websocket
+    - jakarta
+    - javaEE
   most_popular: false
 overview:
   data_collection:
     metrics_description: 'Monitor Tomcat performance with Netdata for optimal Java servlet container operations. Improve your web application performance with real-time Tomcat metrics.'
-    method_description: ''
+    method_description: 'This collectors parses the information provided by the http endpoint of the /manager/status in XML format'
   supported_platforms:
     include: []
     exclude: []
   multi_instance: true
   additional_permissions:
-    description: ''
+    description: "You need to provide the username and the password, to access the webserver's status page. Create a seperate user with read only rights for this particular endpoint"
   default_behavior:
     auto_detection:
-      description: ''
+      description: 'If the Netdata Agent and the Tomcat webserver are in the same host, without configuration, module attempts to connect to http://localhost:8080/manager/status?XML=true, without any credentials. So it will probably fail.'
     limits:
-      description: ''
+      description: 'This module is not supporting SSL communication. If you want a Netdata Agent to monitor a Tomcat deployment, you shouldnt try to monitor it via public network (public internet). Credentials are passed by Netdata in an unsecure port'
     performance_impact:
       description: ''
 setup:
   prerequisites:
-    list: []
+    list: 
+    - title: Create a read-only user for netdata, to monitor the status endpoint. 
+      description: You will need this when you will try to configure the module
   configuration:
     file:
-      name: ''
-      description: ''
+      name: 'python.d/tomcat.conf'
     options:
-      description: ''
+      description: |
+        There are 2 sections:
+
+        * Global variables
+        * One or more JOBS that can define multiple different instances to monitor.
+        
+        The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.Additionally, the following collapsed table contains all the options that can be configured inside a JOB definition.
+        
+        Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
-        title: ''
+        title: 'Config options per job'
         enabled: true
-      list: []
+        list:
+        - name: update_every
+          description: Sets the default data collection frequency.
+          default_value: 5
+          required: false
+        - name: priority
+          description: Controls the order of charts at the netdata dashboard.
+          default_value: 60000
+          required: false
+        - name: autodetection_retry
+          description: Sets the job re-check interval in seconds.
+          default_value: 0
+          required: false
+        - name: penalty
+          description: Indicates whether to apply penalty to update_every in case of failures.
+          default_value: yes
+          required: false
+        - name: url
+          description: The URL of the Tomcat server's status endpoint. Always add the suffix ?XML=true.
+          default_value: no
+          required: true
+        - name: user
+          description: A valid user with read permission to access the /manager/status endpoint of the server. Required if the endpoint is password protected
+          default_value: no
+          required: no
+        - name: pass
+          description: A valid password for the user in question. Required if the endpoint is password protected
+          default_value: no
+          required: no
+        - name: connector_name
+          description: The connector component that communicates with a web connector via the AJP protocol, e.g ajp-bio-8009
+          default_value: null
+          required: false
     examples:
-      folding:
+      folding: 
         enabled: true
-        title: ''
-      list: []
+        title: 'Config'
+      list:
+      - name: Example config 
+        description: A typical example configuration, which is also the default.
+        config: |    
+          localhost:
+            name : 'local'
+            url  : 'http://localhost:8080/manager/status?XML=true'
+
+          localipv4:
+            name : 'local'
+            url  : 'http://127.0.0.1:8080/manager/status?XML=true'
+
+          localipv6:
+            name : 'local'
+            url  : 'http://[::1]:8080/manager/status?XML=true'
 troubleshooting:
   problems:
     list: []
@@ -61,7 +122,7 @@ metrics:
   availability: []
   scopes:
   - name: global
-    description: ""
+    description: "These metrics refer to the entire monitored application"
     labels: []
     metrics:
     - name: tomcat.accesses
