Apply suggestions from code review

--- a/collectors/python.d.plugin/hpssa/metadata.yaml
+++ b/collectors/python.d.plugin/hpssa/metadata.yaml
@@ -118,6 +118,8 @@ setup:
       list:
         - name: Local simple config
           description: A basic configuration, specyfing the path to `ssacli`
+          folding:
+            enabled: false
           config: |
             local:
              ssacli_path: /usr/sbin/ssacli
